fix line-height and word wrap for p tag

--- a/frontend/src/features/users/get/user-info.module.scss
+++ b/frontend/src/features/users/get/user-info.module.scss
@@ -16,4 +16,11 @@
     word-break: break-all;
     overflow-wrap: break-word;
   }
+
+  p {
+    word-wrap: normal !important;
+    word-break: normal !important;
+    white-space: normal;
+    line-height: 16px;
+  }
 }
